--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^0.28.11",
     "html-webpack-plugin": "^3.2.0",
     "less": "^3.0.4",
